Wording changes in html for distance

--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -8,8 +8,9 @@
 
       <div class="row">
         <div class="page-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <h2 style="display: inline">Students Around You <small>(within {{around.me.experianIdToken}} mile)</small></h2>
-          <a ui-sref="settings({focus:'radius'})" >change radius</a>
+          <h2 ng-if="around.me.experianIdToken == 1" style="display: inline">Students Around You <small>(within {{around.me.experianIdToken}} mile)</small></h2>
+          <h2 ng-if="around.me.experianIdToken > 1" style="display: inline">Students Around You <small>(within {{around.me.experianIdToken}} miles)</small></h2>
+          <a ui-sref="settings({focus:'radius'})" class="btn-rented-event" >change search distance</a>
         </div>
       </div>
 
