--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -29,7 +29,7 @@
           </div>
 
           <div class="form-group input-post">
-            <label for="userSearchRadius">Search distance</label>
+            <label for="userSearchRadius">Set search distance circle around your current location</label>
             <select id="userSearchRadius" name="userSearchRadius" class="form-control" ng-model="settings.tempMe.experianIdToken">
               <option value="1">1 mile</option>
               <option value="3">3 miles</option>
