--- a/client/app/rooms/add.room/add.room.html
+++ b/client/app/rooms/add.room/add.room.html
@@ -456,6 +456,7 @@
 
           <div class="row post-padding">
             <div class="col-xs-12 col-sm-12">
+              <p class="pull-left">Any improvements?&nbsp;<i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:feedback@campusly.org?=Website%20Feedback">feedback@campusly.org</a> | <i class="fa fa-facebook-square"></i>&nbsp;&nbsp;<a href="https://www.facebook.com/app_scoped_user_id/837190803015531/" target="_blank">Facebook PM</a></p>
               <button class="btn-rented-medium primary pull-right" type="submit">Save</button>
             </div>
           </div>
