--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -59,6 +59,8 @@
                 <div class="flip-container-room">
                   <div class="flipper">
                     <div class="front white-box">
+                      <!--walk around - user need to click on front side because with flipper off there is no back side -->
+                      <a ui-sref="roomDetail({id: room.roomDetails.id})" style="text-decoration: none">
                       <div class="picture safariFix">
                         <img border="0" ng-src="//maps.googleapis.com/maps/api/staticmap?center={{room.propertyDetails.coords.latitude}},{{room.propertyDetails.coords.longitude}}&zoom=14&scale=2&size=400x250&markers=color:blue%7C{{room.propertyDetails.coords.latitude}},{{room.propertyDetails.coords.longitude}}&key=AIzaSyAm7woOFr0TOKG0U7jsBF5K3LSifdDjgfs">
                       </div>
@@ -74,6 +76,7 @@
                         <li><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;{{room.roomDetails.availableMoveIn | date }}</li>
                         <li><i class="fa fa-map-marker"></i>&nbsp;&nbsp;{{room.propertyDetails.city}}</li>
                       </ul>
+                      </a>
                     </div>
                     <div class="back">
                       <a ui-sref="roomDetail({id: room.roomDetails.id})"> <h2>View Detail</h2> </a>
