--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,12 @@
   <head>
     <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
     for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
-  if (typeof String.prototype.startsWith != 'function') {String.prototype.startsWith = function (str){return this.indexOf(str) === 0;};}if(window.location.href.startsWith('https://campusly.org')){mixpanel.init("bd202854d110bac5e72d7e034abdae01");console.log('mixpanel tracking campusly live page');} else { mixpanel.init("41a02b2df2e263307327276d0ed559ec");console.log('mixpanel tracking in any other mode'); }</script><!-- end Mixpanel -->
+    if (typeof String.prototype.startsWith != 'function')
+      {String.prototype.startsWith = function (str){return this.indexOf(str) === 0;};}
+    if(window.location.href.startsWith('https://campusly.org' || 'http://campusly.org' || 'https://www.campusly.org' || 'http://www.campusly.org'))
+      {mixpanel.init("bd202854d110bac5e72d7e034abdae01");console.log('Mixpanel production');}
+    else
+      {mixpanel.init("41a02b2df2e263307327276d0ed559ec");console.log('Mixpanel test');}</script><!-- end Mixpanel -->
     <!--<script type="text/javascript" src="components/blocks/mixpanel/mixpanel.js"></script>-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
