--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -48,7 +48,7 @@
             <div class="flip-container-room">
               <div class="flipper">
                 <div class="front white-box">
-                  <a ui-sref="lookingDetail({id:look.id})" style="text-decoration: none">
+                  <a ui-sref="lookingDetail({param:look.id})" style="text-decoration: none">
                   <div class="center-image">
                     <img ng-if="look.relatedUserId.profileImage" ng-src="api/images{{look.relatedUserId.profileImage}}" class="img-circle center-block looking-grid-profile-img">
                     <i ng-if="!look.relatedUserId.profileImage" class="fa fa-user fa-4x"></i>
@@ -68,7 +68,7 @@
                   </a>
                 </div>
                 <div class="back">
-                  <a ui-sref="lookingDetail({id:look.id})"> <h2>View</h2> </a>
+                  <a ui-sref="lookingDetail({param:look.id})"> <h2>View</h2> </a>
                 </div>
               </div>
             </div>
