--- a/client/index.html
+++ b/client/index.html
@@ -118,6 +118,8 @@
           <script src="app/account/login/login.route.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
+          <script src="app/account/unsubscribe/unsubscribe.controller.js"></script>
+          <script src="app/account/unsubscribe/unsubscribe.route.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/aroundYou/around.you.controller.js"></script>
