Stellar JS package added using bower

--- a/client/index.html
+++ b/client/index.html
@@ -95,6 +95,7 @@
       <script src="bower_components/angular-slick/dist/slick.js"></script>
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/angular-moment/angular-moment.js"></script>
+      <script src="bower_components/jquery.stellar/jquery.stellar.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
