--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -35,30 +35,32 @@
           <div class="white-box interested-box-search" ng-if="around.showSearch">
             <form name="connectToSearch" ng-submit="around.setQueryAndSearch(around.query)" novalidate>
               <div class="row">
-                <div class="col-sm-4 col-md-4">
-                <h4><i class="fa fa-car"></i>Carpooling</h4>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingToCampus">To Campus</label>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingFromCampus">From Campus</label>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingForGroceries">For Groceries</label>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingForRoadtrip">Roadtrip</label>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingSplit">Split a Uber/Lyft</label>
-              </div>
-              <div class="col-sm-4 col-md-4">
-                <h4><i class="fa fa-child"></i>Walking</h4>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.walkingToCampus">To Campus</label>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.walkingFromCampus">From Campus</label>
-              </div>
-              <div class="col-sm-4 col-md-4">
-                <h4><i class="fa fa-users"></i>Meeting Up</h4>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForHangout">Hangout</label>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForStudy">Study Group</label>
-                <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForEvents">Campus Events</label>
-              </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                  <h4><i class="fa fa-car"></i>Carpooling</h4>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingToCampus">To Campus</label>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingFromCampus">From Campus</label>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingForGroceries">For Groceries</label>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingForRoadtrip">Roadtrip</label>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingSplit">Split a Uber/Lyft</label>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                  <h4><i class="fa fa-child"></i>Walking</h4>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.walkingToCampus">To Campus</label>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.walkingFromCampus">From Campus</label>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                  <h4><i class="fa fa-users"></i>Meeting Up</h4>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForHangout">Hangout</label>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForStudy">Study Group</label>
+                  <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForEvents">Campus Events</label>
+                </div>
               </div>
               <div class="row">
-                <div class="col-sm-3"><button class="btn btn-secondary btn-block" type="submit" ng-disabled="!connectToSearch.$dirty">Search</button></div>
-                <div class="col-sm-3"><button class="btn btn-secondary btn-block" ng-click="around.clearSearch()">Reset</button></div>
+                <div class="col-xs-12 col-sm-4 col-md-4 col-sm-offset-8 col-md-offset-8">
+                  <button class="btn-rented-medium primary" type="submit" ng-disabled="!connectToSearch.$dirty">Search</button>
+                  <button class="btn-rented-small reset" ng-click="around.clearSearch()">Clear</button>
                 </div>
+              </div>
             </form>
           </div>
           <!-- end of search partial -->
@@ -93,13 +95,28 @@
                         <h4 class="media-heading user-name" style="text-align: center; padding: 20px">
                           {{arYou.firstname}} {{arYou.lastname[0] | uppercase}}.
                         </h4>
-                        <div style="font-size: 0.9em; text-align: center;min-height: 60px">
+                        <div style="text-align: center;min-height: 60px">
                           <dl>
                             <dd ng-show="arYou.usereducationUsers[0].educationCenterName">{{arYou.usereducationUsers[0].educationCenterName}}</dd>
                             <dd ng-hide="arYou.usereducationUsers[0].educationCenterName">No university entered</dd>
 
-                            <dd ng-show="arYou.usereducationUsers[0].graduationDate">Graduation: {{arYou.usereducationUsers[0].graduationDate | date:'yyyy'}}</dd>
-                            <dd ng-hide="arYou.usereducationUsers[0].graduationDate">Graduation: N/A</dd>
+                            Interested In:
+
+                            <div ng-show="arYou.userstatusesUsers[0].carpoolingForGroceries || arYou.userstatusesUsers[0].carpoolingToCampus
+                              || arYou.userstatusesUsers[0].carpoolingFromCampus || arYou.userstatusesUsers[0].carpoolingForRoadtrip
+                              || arYou.userstatusesUsers[0].carpoolingSplit">
+                              <p><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</p>
+                            </div>
+
+                            <div ng-show="arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus">
+                              <p><i class="fa fa-child"></i>&nbsp;&nbsp;Walking</p>
+                            </div>
+
+                            <div ng-show="arYou.userstatusesUsers[0].meetForHangout || arYou.userstatusesUsers[0].meetForStudy
+                              || arYou.userstatusesUsers[0].meetForEvents">
+                              <p><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</p>
+                            </div>
+
                           </dl>
                         </div>
                         <div style="text-align: center; display: inline-block;width: 100%;">
