--- a/client/app/dashboard/looking/looking-details/profile.section.html
+++ b/client/app/dashboard/looking/looking-details/profile.section.html
@@ -63,7 +63,7 @@
   <hr/>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-      <a id="email" style="margin-left:20px" class="contact-bubble-email pull-right" ng-href="mailto:{{detail.lookingDetail.relatedUserId.email}}?Subject=Interested%20in%20your%20looking" target="_top">
+      <a id="email" style="margin-left:20px" class="contact-bubble-email pull-right" ng-href="mailto:{{detail.lookingDetail.relatedUserId.email}}?Subject=Interested%20in%20your%20looking">
         <i class="fa fa-send fa-lg"></i><p>Email</p></a>
       <script type="text/javascript">
         mixpanel.track_links("#email", "Email sent - looking");
