--- a/client/app/roomDetail/highlights.section.html
+++ b/client/app/roomDetail/highlights.section.html
@@ -83,7 +83,7 @@
 
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-        <a id="email" style="margin-left:20px" class="contact-bubble-email pull-right" ng-href="mailto:{{room.creatorEmail}}?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i><p>Email</p></a>
+        <a id="email" style="margin-left:20px" class="contact-bubble-email pull-right" ng-href="mailto:{{room.creatorEmail}}?Subject=Interested%20in%20your%20room"><i class="fa fa-send fa-lg"></i><p>Email</p></a>
         <script type="text/javascript">
           mixpanel.track_links("#email", "Email sent - available room");
           mixpanel.people.increment('Email sent - available room');
