--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -18,37 +18,29 @@
       </h3>
       <slick dots="true" class="slider row" slides-to-show="4" slides-to-scroll="4" responsive="dashboard.breakpoints.aroundYou" init-onload="true" infinite="false" data="dashboard.aroundYou" ng-if="dashboard.aroundYou.length && dashboard.me.shareProfile">
 
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 room" ng-repeat="around in dashboard.aroundYou track by $index">
-          <img ng-if="around.profileImage" ng-src="api/images{{around.profileImage}}" class="img-circle center-image" height="80px" width="80px" style="margin-top:0">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 room" ng-repeat="around in dashboard.aroundYou track by $index">
+          <img ng-if="around.profileImage" ng-src="api/images{{around.profileImage}}" class="img-circle center-block looking-profile-img">
           <i ng-if="!around.profileImage" class="fa fa-user fa-5x" style="text-align: center; display: inline-block;width: 100%;"></i>
-          <div class="">
+          <div class="arYouView">
             <h4 class="media-heading user-name" style="text-align: center">
               {{around.firstname}} {{around.lastname[0] | uppercase}}.
             </h4>
-            <div style=" min-height: 60px">
-              <dl>
-                <dd ng-show="around.usereducationUsers[0].educationCenterName">{{around.usereducationUsers[0].educationCenterName}}</dd>
-                <dd ng-hide="around.usereducationUsers[0].educationCenterName">No university entered</dd>
-
+            <p ng-show="around.usereducationUsers[0].educationCenterName" style="text-align: center">{{around.usereducationUsers[0].educationCenterName}}</p>
+            <p ng-hide="around.usereducationUsers[0].educationCenterName" style="text-align: center">No university entered</p>
+            <div class="info">
+              <strong class="value">
                 Interested In:
-
-                <div ng-show="around.userstatusesUsers[0].carpoolingForGroceries || around.userstatusesUsers[0].carpoolingToCampus
-                  || around.userstatusesUsers[0].carpoolingFromCampus || around.userstatusesUsers[0].carpoolingForRoadtrip
-                  || around.userstatusesUsers[0].carpoolingSplit">
-                    <p><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</p>
-                </div>
-
-                <div ng-show="around.userstatusesUsers[0].walkingToCampus || around.userstatusesUsers[0].walkingFromCampus">
-                  <p><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;Walking</p>
-                </div>
-
-                <div ng-show="around.userstatusesUsers[0].meetForHangout || around.userstatusesUsers[0].meetForStudy
-                || around.userstatusesUsers[0].meetForEvents">
-                  <p><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</p>
-                </div>
-
-              </dl>
+              </strong>
+              <br>
             </div>
+            <ul class="specs">
+              <li ng-show="around.userstatusesUsers[0].carpoolingForGroceries || around.userstatusesUsers[0].carpoolingToCampus
+                  || around.userstatusesUsers[0].carpoolingFromCampus || around.userstatusesUsers[0].carpoolingForRoadtrip
+                  || around.userstatusesUsers[0].carpoolingSplit"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
+              <li ng-show="around.userstatusesUsers[0].walkingToCampus || around.userstatusesUsers[0].walkingFromCampus"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;Walking</li>
+              <li ng-show="around.userstatusesUsers[0].meetForHangout || around.userstatusesUsers[0].meetForStudy
+                || around.userstatusesUsers[0].meetForEvents"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
+            </ul>
           </div>
           <div style="text-align: center;width: 100%;">
             <a id="facebookPM" ng-href="{{around.facebook}}" ng-if="around.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
